fix(#11): lower z-index for tangle

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,8 @@
   --link-text: normal 500 70px/0.95 var(--Manrope);
   --awards-text: normal 700 28px/1.3 var(--Manrope);
 
+  
+
   /* colors */
   --main-color: #ffffff;
   --primary-color: #000000;
@@ -142,7 +144,7 @@ button {
 }
 
 #canvas {
-  z-index: 100;
+  z-index: 1;
   top: 0;
   left: 0;
   position: fixed;
